# mate-submodules

./: .build.yml  .travis.yml  CNAME  Makefile.am  configure.ac  eggdesktopfile.c  eggdesktopfile.h  eggsmclient-dbus.c  eggsmclient-osx.c  eggsmclient-private.h  eggsmclient-xsmp.c  eggsmclient.c  eggsmclient.h  eggtreemultidnd.h  index.html  meson.build
.github/ISSUE_TEMPLATE/: mate-issue-template.md
2020-07-21-100118-4468-cppcheck@580a612e2360_master/: 0.html  2.html
2020-07-21-100122-9527-cppcheck@580a612e2360_master/: 1.html  index.html  stats.html
2021-02-22-235509-3288-1@c24f63ade22f_master@c24f63ade22f_master/: index.html  report-47c068.html  report-e1599f.html
2021-02-22-235518-7924-cppcheck@c24f63ade22f_master/: 0.html
2021-02-22-235523-0713-cppcheck@c24f63ade22f_master/: 1.html
2021-04-25-131133-3282-1@296e167612dc_gthread/: index.html  report-087c0e.html  report-beab0d.html
2021-04-25-131705-3280-1@5a0174a9969b_master/: index.html  report-35edc5.html
2021-04-25-131705-3280-1@5a0174a9969b_master@5e1ce21ffb80_master/: report-9e8460.html
2021-04-25-131714-1505-cppcheck@5a0174a9969b_master/: 2.html
2021-04-25-142802-3283-1@5e1ce21ffb80_master/: index.html  report-65ea90.html  report-95b91c.html
2021-05-30-161157-3692-1@ee05c6394bbc_master@ee05c6394bbc_master/: index.html  report-45d521.html  report-fc0615.html
2021-05-30-161207-3261-cppcheck@ee05c6394bbc_master/: 0.html  2.html  index.html
2021-05-30-161212-0993-cppcheck@ee05c6394bbc_master/: 1.html  stats.html
2021-06-23-203426-3704-1@f3091f9a5400_master@f3091f9a5400_master/: index.html  report-42a8ca.html  report-ca1346.html
2021-06-23-203436-5727-cppcheck@f3091f9a5400_master/: index.html
2021-06-23-203441-5241-cppcheck@f3091f9a5400_master/: 0.html  1.html  2.html
2021-12-14-163448-3833-1@2f3e944545dd_shorten-64-to-32@7250ebd5698f_variableScope@4074560e3642_master/: index.html  report-08275f.html  report-e93775.html
2021-12-14-163456-7662-cppcheck@2f3e944545dd_shorten-64-to-32/: 1.html  index.html
2021-12-14-163501-1847-cppcheck@2f3e944545dd_shorten-64-to-32/: 0.html  2.html
2022-02-13-193024-3890-1@a8efc6b02b40_master/: index.html  report-39f843.html  report-74fc2c.html
2022-02-13-193036-9887-cppcheck@a8efc6b02b40_master/: 0.html  1.html  stats.html
2022-07-24-194911-3812-1@4d03d59e151f_variableScope/: index.html  report-b8f564.html  report-cf3974.html
2022-07-24-194920-4059-cppcheck@4d03d59e151f_variableScope/: 0.html
2022-07-24-194925-3066-cppcheck@4d03d59e151f_variableScope/: 1.html
2022-07-24-203759-3816-1@7250ebd5698f_variableScope/: index.html  report-b8f564.html  report-cf3974.html
2022-07-24-203811-9644-cppcheck@7250ebd5698f_variableScope/: index.html
2022-11-10-052121-3719-1@6b6a249a3516_master@6b6a249a3516_master/: index.html  report-b8f564.html  report-cf3974.html
2022-11-10-052132-0408-cppcheck@6b6a249a3516_master/: stats.html
2023-05-15-095205-3727-1@e2d93e186d63_master@e2d93e186d63_master/: index.html  report-b8f564.html  report-cf3974.html
2023-05-15-095213-0228-cppcheck@e2d93e186d63_master/: 2.html  stats.html
2023-08-30-135940-3696-1@4074560e3642_master/: index.html  report-b8f564.html  report-cf3974.html
2023-08-30-135949-5967-cppcheck@4074560e3642_master/: 0.html
2023-08-30-135953-9865-cppcheck@4074560e3642_master/: 1.html  index.html
libegg/: Makefile.am  eggdesktopfile.c  eggdesktopfile.h  eggsmclient-private.h  eggsmclient-xsmp.c  eggsmclient.c  eggsmclient.h  eggtreemultidnd.c  eggtreemultidnd.h  meson.build
